--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ body{
     margin: 0 auto;
 }
 
+.active{
+    display: block;
+    
+}
+
 /* Header */
 
 .header{
@@ -35,6 +40,18 @@ body{
     max-height: 100px;
     display: flex;
     align-items: center;
+}
+
+.header.fixed{
+    padding: 10px 0;
+    background-color: #5dca88;
+    position: fixed;
+    z-index: 1000000;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translate3d(0,0,0);
+    padding: 10px 0;
 }
 
 .header__inner{
@@ -86,6 +103,10 @@ body{
     border: 0;
     background:none;
     cursor: pointer;
+}
+
+.nav-toggle:focus{
+    outline: none;
 }
 
 .nav-togle__item{
@@ -942,6 +963,34 @@ font-size: 30px;
         display:none;
     }
 
+    .nav__link.active{
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 100px;
+        font-size: 20px;
+        font-weight: 700;
+        color: rgb(1, 14, 48);
+    }
+
+    .nav__link.active:nth-child(2){
+
+        padding-top: 5px;
+}
+
+.nav__link.active:nth-child(3){
+
+    padding-top: 30px;
+}
+
+.nav__link.active:nth-child(4){
+
+    padding-top: 55px;
+}
+.nav__link.active:nth-child(5){
+
+    padding-top: 80px;
+}
     .nav-toggle{
         display:block
     }
